tests/tests/neg/error_messages/resolver/cannot_resolve.rs
#[flux::sig(fn(x: i322) -> bool )] //~ ERROR cannot resolve
pub fn boo(x: i32) -> bool {
    x > 0
}
